Sync changes to ccsdk/sli for GRA microservice
Sync changes made to ccsdk/sli to support GRA microservice. Details
of changes follow:

update on exec-sls-DG for appc integration

Signed-off-by: Ganesh <ganesh.c@samsung.com>
Change-Id: If8f9338ed7d75be3ce416e31cb7b61db862fd0ef
Issue-ID: CCSDK-3499

Release version 1.2.1

Release version 1.2.1 of ccsdk/sli

Issue-ID: CCSDK-3237
Signed-off-by: Dan Timoney <dtimoney@att.com>
Change-Id: Ie33b0e730465a1231e4654fdc561c1f22d08ff7d

Fix yangparser invocation

Fix YangParser invocation in restconf-provider to address breaking
change in ODL Aluminum release.

Issue-ID: SDNC-1515
Signed-off-by: Dan Timoney <dtimoney@att.com>
Change-Id: I9974889bfa9bbd11077c95275c0cb8ba59b1b0bb

Release version 1.2.2 and roll to next snapshot

Release version 1.2.2 of ccsdk/sli and roll to next snapshot

Issue-ID: SDNC-1515
Signed-off-by: Dan Timoney <dtimoney@att.com>
Change-Id: Ie301afd08ba9039b510b55f38b7be5ad8d1773cb

Release Alu SR3 version (1.2.3) of ccsdk/sli

Release Alu SR3 (1.2.3) version of ccsdk/sli

Issue-ID: CCSDK-3285
Signed-off-by: Dan Timoney <dtimoney@att.com>
Change-Id: Ibe83d8161ef5248bf10571f9b30799168cc7a2bb

Add a .gitreview file

otherwise git-review will push commits to master branch by default

Issue-ID: SDNC-1515
Signed-off-by: Guillaume Lambert <guillaume.lambert@orange.com>
Change-Id: I7170c024d2dbb672414f072e302d09015c19101f

Updating odlparent's version to 2.1.5

Issue-ID: CCSDK-3330
Signed-off-by: Singal, Kapil (ks220y) <ks220y@att.com>
Change-Id: I3aecb3d28b405cf3612f2f688a756514876a7223

Upgrading akka cluster dependency

Updating odlparent versions to 2.1.7-SNAPSHOT

Issue-ID: CCSDK-3333
Signed-off-by: Singal, Kapil (ks220y) <ks220y@att.com>
Change-Id: Ia5da682990acbf99a2026393f8dea511ccca4420
(cherry picked from commit e12652babc98c403fefead2c83395a5439df7dac)

Relasing 1.2.4 and Rolling to next snapshot

Issue-ID: CCSDK-3330
Change-Id: Ib073f4875f07271ca752a8062f8484e4f6a2a828

[SDNOPT1-1202]:update ccsdk-sli